Mobile letter spacing fix

--- a/application/themes/clean/mobile.css
+++ b/application/themes/clean/mobile.css
@@ -64,14 +64,16 @@ h2
 {
   font-family: fc_bebas;
   font-size: $theme_headline_size_large;
-  letter-spacing: -1px;
+  letter-spacing: normal;
   margin-bottom: 10px;
+  word-spacing: 0.2em;
 }
 h3
 {
   font-family: fc_bebas;
   font-size: $theme_headline_size_medium;
-  letter-spacing: -1px;
+  letter-spacing: normal;
+  word-spacing: 0.2em;
 }
 h4
 {
@@ -497,7 +499,7 @@ input.text,
   position: static;
   font-size: 13pt;
   text-align: center;
-  letter-spacing: -1px;
+  letter-spacing: normal;
   background: none;
   padding: 0px;
 } 
@@ -1144,7 +1146,7 @@ body {
 .generic_layout_container h3 {
   margin-bottom: 0;
   padding: 5px;
-  letter-spacing: 0;
+  letter-spacing: normal;
   font-weight: normal;
 }
 
